// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dynamicImport should take into consideration options.dynamicImport 1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-class-properties/lib/index.js",
      Object {
        "loose": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-optional-chaining/lib/index.js",
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-nullish-coalescing-operator/lib/index.js",
    Array [
      "@babel/plugin-transform-runtime",
      Object {
        "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime",
        "corejs": false,
        "helpers": false,
        "regenerator": true,
        "useESModules": false,
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/preset-env/lib/index.js",
      Object {
        "corejs": 3,
        "loose": true,
        "modules": "commonjs",
        "shippedProposals": true,
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": "entry",
      },
    ],
  ],
  "sourceType": "unambiguous",
}
`;

exports[`env should take into consideration process.env.NODE_ENV 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/@babel/plugin-syntax-jsx/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/plugin-transform-react-jsx/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-transform-react-display-name/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-class-properties/lib/index.js",
      Object {
        "loose": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-optional-chaining/lib/index.js",
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-nullish-coalescing-operator/lib/index.js",
    Array [
      "@babel/plugin-transform-runtime",
      Object {
        "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime",
        "corejs": false,
        "helpers": false,
        "regenerator": true,
        "useESModules": false,
      },
    ],
    "<PROJECT_ROOT>/node_modules/babel-plugin-dynamic-import-node/lib/index.js",
    "<PROJECT_ROOT>/node_modules/@babel/plugin-transform-react-jsx-source/lib/index.js",
    "<PROJECT_ROOT>/node_modules/@babel/plugin-transform-react-jsx-self/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/preset-env/lib/index.js",
      Object {
        "corejs": 3,
        "loose": true,
        "modules": "commonjs",
        "shippedProposals": true,
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": "entry",
      },
    ],
  ],
  "sourceType": "unambiguous",
}
`;

exports[`env should take into consideration process.env.NODE_ENV 2`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/@babel/plugin-syntax-jsx/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/plugin-transform-react-jsx/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-transform-react-display-name/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-class-properties/lib/index.js",
      Object {
        "loose": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-optional-chaining/lib/index.js",
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-nullish-coalescing-operator/lib/index.js",
    Array [
      "@babel/plugin-transform-runtime",
      Object {
        "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime",
        "corejs": false,
        "helpers": false,
        "regenerator": true,
        "useESModules": false,
      },
    ],
    "<PROJECT_ROOT>/node_modules/babel-plugin-dynamic-import-node/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-remove-prop-types/lib/index.js",
      Object {
        "removeImport": true,
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/preset-env/lib/index.js",
      Object {
        "corejs": 3,
        "loose": true,
        "modules": "commonjs",
        "shippedProposals": true,
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": "entry",
      },
    ],
  ],
  "sourceType": "unambiguous",
}
`;

exports[`functional class-properties should handle correctly 1`] = `
"var Bork = function Bork() {
  \\"use strict\\";

  this.x = 'bar';
  this.y = void 0;
};

Bork.a = 'foo';
Bork.b = void 0;"
`;

exports[`functional nullish-coalescing-operator should handle correctly 1`] = `
"var _object$foo;

var foo = (_object$foo = object.foo) !== null && _object$foo !== void 0 ? _object$foo : 'bar';"
`;

exports[`functional object-rest-spread should handle correctly 1`] = `
"var z = Object.assign({
  x: x
}, y);"
`;

exports[`functional object-rest-spread should handle correctly for target with support 1`] = `
"var z = {
  x,
  ...y
};"
`;

exports[`functional optional-chaining should handle correctly 1`] = `
"var _obj$foo, _obj$foo$bar;

var obj = {
  foo: {
    bar: {
      baz: 42
    }
  }
};
var baz = obj === null || obj === void 0 ? void 0 : (_obj$foo = obj.foo) === null || _obj$foo === void 0 ? void 0 : (_obj$foo$bar = _obj$foo.bar) === null || _obj$foo$bar === void 0 ? void 0 : _obj$foo$bar.baz;"
`;

exports[`lodash should disable the lodash plugin if options.lodash is disabled 1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-class-properties/lib/index.js",
      Object {
        "loose": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-optional-chaining/lib/index.js",
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-nullish-coalescing-operator/lib/index.js",
    Array [
      "@babel/plugin-transform-runtime",
      Object {
        "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime",
        "corejs": false,
        "helpers": false,
        "regenerator": true,
        "useESModules": false,
      },
    ],
    "<PROJECT_ROOT>/node_modules/babel-plugin-dynamic-import-node/lib/index.js",
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/preset-env/lib/index.js",
      Object {
        "corejs": 3,
        "loose": true,
        "modules": "commonjs",
        "shippedProposals": true,
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": "entry",
      },
    ],
  ],
  "sourceType": "unambiguous",
}
`;

exports[`lodash should pass any options to the lodash plugin 1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-class-properties/lib/index.js",
      Object {
        "loose": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-optional-chaining/lib/index.js",
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-nullish-coalescing-operator/lib/index.js",
    Array [
      "@babel/plugin-transform-runtime",
      Object {
        "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime",
        "corejs": false,
        "helpers": false,
        "regenerator": true,
        "useESModules": false,
      },
    ],
    "<PROJECT_ROOT>/node_modules/babel-plugin-dynamic-import-node/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
          "recompose",
        ],
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/preset-env/lib/index.js",
      Object {
        "corejs": 3,
        "loose": true,
        "modules": "commonjs",
        "shippedProposals": true,
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": "entry",
      },
    ],
  ],
  "sourceType": "unambiguous",
}
`;

exports[`loose should disable loose if options.loose is disabled 1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-class-properties/lib/index.js",
      Object {
        "loose": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-optional-chaining/lib/index.js",
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-nullish-coalescing-operator/lib/index.js",
    Array [
      "@babel/plugin-transform-runtime",
      Object {
        "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime",
        "corejs": false,
        "helpers": false,
        "regenerator": true,
        "useESModules": false,
      },
    ],
    "<PROJECT_ROOT>/node_modules/babel-plugin-dynamic-import-node/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/preset-env/lib/index.js",
      Object {
        "corejs": 3,
        "loose": true,
        "modules": "commonjs",
        "shippedProposals": true,
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": "entry",
      },
    ],
  ],
  "sourceType": "unambiguous",
}
`;

exports[`modules should set modules to false by default if BABEL_ENV is es 1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-class-properties/lib/index.js",
      Object {
        "loose": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-optional-chaining/lib/index.js",
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-nullish-coalescing-operator/lib/index.js",
    Array [
      "@babel/plugin-transform-runtime",
      Object {
        "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime",
        "corejs": false,
        "helpers": false,
        "regenerator": true,
        "useESModules": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-syntax-dynamic-import/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/preset-env/lib/index.js",
      Object {
        "corejs": 3,
        "loose": true,
        "modules": false,
        "shippedProposals": true,
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": "entry",
      },
    ],
  ],
  "sourceType": "unambiguous",
}
`;

exports[`modules should set modules to false if options.modules is disabled 1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-class-properties/lib/index.js",
      Object {
        "loose": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-optional-chaining/lib/index.js",
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-nullish-coalescing-operator/lib/index.js",
    Array [
      "@babel/plugin-transform-runtime",
      Object {
        "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime",
        "corejs": false,
        "helpers": false,
        "regenerator": true,
        "useESModules": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-syntax-dynamic-import/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/preset-env/lib/index.js",
      Object {
        "corejs": 3,
        "loose": true,
        "modules": false,
        "shippedProposals": true,
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": "entry",
      },
    ],
  ],
  "sourceType": "unambiguous",
}
`;

exports[`react should enable react optimizations if options.env is production 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/@babel/plugin-syntax-jsx/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/plugin-transform-react-jsx/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-transform-react-display-name/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-class-properties/lib/index.js",
      Object {
        "loose": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-optional-chaining/lib/index.js",
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-nullish-coalescing-operator/lib/index.js",
    Array [
      "@babel/plugin-transform-runtime",
      Object {
        "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime",
        "corejs": false,
        "helpers": false,
        "regenerator": true,
        "useESModules": false,
      },
    ],
    "<PROJECT_ROOT>/node_modules/babel-plugin-dynamic-import-node/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-remove-prop-types/lib/index.js",
      Object {
        "removeImport": true,
      },
    ],
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/preset-env/lib/index.js",
      Object {
        "corejs": 3,
        "loose": true,
        "modules": "commonjs",
        "shippedProposals": true,
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": "entry",
      },
    ],
  ],
  "sourceType": "unambiguous",
}
`;

exports[`react should enable react plugins if options.react is enabled and enable development goodies 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/@babel/plugin-syntax-jsx/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/plugin-transform-react-jsx/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-transform-react-display-name/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-class-properties/lib/index.js",
      Object {
        "loose": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-optional-chaining/lib/index.js",
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-nullish-coalescing-operator/lib/index.js",
    Array [
      "@babel/plugin-transform-runtime",
      Object {
        "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime",
        "corejs": false,
        "helpers": false,
        "regenerator": true,
        "useESModules": false,
      },
    ],
    "<PROJECT_ROOT>/node_modules/babel-plugin-dynamic-import-node/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/preset-env/lib/index.js",
      Object {
        "corejs": 3,
        "loose": true,
        "modules": "commonjs",
        "shippedProposals": true,
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": "entry",
      },
    ],
  ],
  "sourceType": "unambiguous",
}
`;

exports[`should have the right config with the default options 1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-class-properties/lib/index.js",
      Object {
        "loose": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-optional-chaining/lib/index.js",
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-nullish-coalescing-operator/lib/index.js",
    Array [
      "@babel/plugin-transform-runtime",
      Object {
        "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime",
        "corejs": false,
        "helpers": false,
        "regenerator": true,
        "useESModules": false,
      },
    ],
    "<PROJECT_ROOT>/node_modules/babel-plugin-dynamic-import-node/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/preset-env/lib/index.js",
      Object {
        "corejs": 3,
        "loose": true,
        "modules": "commonjs",
        "shippedProposals": true,
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": "entry",
      },
    ],
  ],
  "sourceType": "unambiguous",
}
`;

exports[`targets should allow overriding options.targets with an object 1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-class-properties/lib/index.js",
      Object {
        "loose": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-optional-chaining/lib/index.js",
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-nullish-coalescing-operator/lib/index.js",
    Array [
      "@babel/plugin-transform-runtime",
      Object {
        "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime",
        "corejs": false,
        "helpers": false,
        "regenerator": true,
        "useESModules": false,
      },
    ],
    "<PROJECT_ROOT>/node_modules/babel-plugin-dynamic-import-node/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/preset-env/lib/index.js",
      Object {
        "corejs": 3,
        "loose": true,
        "modules": "commonjs",
        "shippedProposals": true,
        "targets": Object {
          "node": "current",
        },
        "useBuiltIns": "entry",
      },
    ],
  ],
  "sourceType": "unambiguous",
}
`;

exports[`targets should return a config for browsers if options.targets is set to browsers 1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-class-properties/lib/index.js",
      Object {
        "loose": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-optional-chaining/lib/index.js",
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-nullish-coalescing-operator/lib/index.js",
    Array [
      "@babel/plugin-transform-runtime",
      Object {
        "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime",
        "corejs": false,
        "helpers": false,
        "regenerator": true,
        "useESModules": false,
      },
    ],
    "<PROJECT_ROOT>/node_modules/babel-plugin-dynamic-import-node/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/preset-env/lib/index.js",
      Object {
        "corejs": 3,
        "loose": true,
        "modules": "commonjs",
        "shippedProposals": true,
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
        },
        "useBuiltIns": "entry",
      },
    ],
  ],
  "sourceType": "unambiguous",
}
`;

exports[`targets should return a config for node if options.targets is set to node 1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-class-properties/lib/index.js",
      Object {
        "loose": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-optional-chaining/lib/index.js",
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-nullish-coalescing-operator/lib/index.js",
    Array [
      "@babel/plugin-transform-runtime",
      Object {
        "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime",
        "corejs": false,
        "helpers": false,
        "regenerator": true,
        "useESModules": false,
      },
    ],
    "<PROJECT_ROOT>/node_modules/babel-plugin-dynamic-import-node/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/preset-env/lib/index.js",
      Object {
        "corejs": 3,
        "loose": true,
        "modules": "commonjs",
        "shippedProposals": true,
        "targets": Object {
          "node": "8.9",
        },
        "useBuiltIns": "entry",
      },
    ],
  ],
  "sourceType": "unambiguous",
}
`;

exports[`targets should return a default config that target browsers and node 1`] = `
Object {
  "plugins": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-class-properties/lib/index.js",
      Object {
        "loose": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-optional-chaining/lib/index.js",
    "<PROJECT_ROOT>/node_modules/@babel/plugin-proposal-nullish-coalescing-operator/lib/index.js",
    Array [
      "@babel/plugin-transform-runtime",
      Object {
        "absoluteRuntime": "<PROJECT_ROOT>/node_modules/@babel/runtime",
        "corejs": false,
        "helpers": false,
        "regenerator": true,
        "useESModules": false,
      },
    ],
    "<PROJECT_ROOT>/node_modules/babel-plugin-dynamic-import-node/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/@babel/preset-env/lib/index.js",
      Object {
        "corejs": 3,
        "loose": true,
        "modules": "commonjs",
        "shippedProposals": true,
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": "entry",
      },
    ],
  ],
  "sourceType": "unambiguous",
}
`;
